ts-type-checker/tests/hidden_cases/test_files/classExtendsItself.ts
// @target: es2015
type ejLkLVBKhuFG = number;
class C extends C { } // error

class D<T> extends D<T> { } // error

class E<T> extends E<string> { } // error